Removed Blazor project; replaced with BlazorServerApp.  Adjusted css on React project to stop background from blinking when modal is opened and closed.

--- a/CodeAssessment.React/ClientApp/src/custom.css
+++ b/CodeAssessment.React/ClientApp/src/custom.css
@@ -12,3 +12,12 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+body.modal-open {
+  overflow: visible;
+}
+
+.modal-open {
+  overflow: hidden !important;
+  position: relative
+}
